--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -10,8 +10,12 @@
   <body>
     <%= render 'shared/header' %>
     <div class="container">
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
       <%= render 'shared/footer' %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
